2010-06-15  Sebastien Pouliot  <sebastien@ximian.com>

	* pal/gtk/pal-gtk.cpp: Do not supply NULL as parent window to 
	dialogs	since it allows more than one dialog to be shown at the
	same time (e.g. events) and, besides the obvious problems, that
	differs from SL behavior

2010-06-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: ProgressiveSource::DataWrite: don't report download progress
	if size is unknown.

2010-06-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: ProgressiveSource::DataWrite: Don't seek anywhere if offset is
	-1, we should just write to whatever the current position is. Also don't use
	a -1 offset to calculate the current write_pos and the available ranges.

2010-06-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: Make the debug spew compile.

2010-06-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp|h: Clean up statusText properly, and ensure to call
	SetStatus on the HttpResponse so that policies know we succeeded.

2010-06-14  Chris Toshok  <toshok@ximian.com>

	* capture.cpp: comment out spew.

	* pal/pal.h: use enums for everything.  allow us to specify yes/no
	buttons for message dialogs (but not managed code), and allow
	us (and again not managed code) to change the message box type.

	* pal/gtk/pal-gtk.h,cpp: track new messagebox api.

	* pal/capture/pal-linux-capture.cpp (MoonCaptureServiceLinux::RequestSystemAccess):
	pop up a message box using the windowing service to request
	permission.

	* pal/capture/v4l2/pal-v4l2-video-capture.cpp: comment out spew.

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* deployment.cpp|h: Track deployment initialization time since
	some properties can only be set at that time. If no set by the
	manifest then set ExternalCallersFromCrossDomainProperty to 
	CrossDomainAccessNoAccess when initialization is complete
	* security.h: ElevatedPermissionsProperty can only be set during
	deployment initialization